[gd_scene load_steps=8 format=3 uid="uid://j7wnsp1qkywp"]

[ext_resource type="Script" uid="uid://6w3piirgqvm2" path="res://Assets/Character/Player/Scene and Code/player.gd" id="1_3qydi"]
[ext_resource type="PackedScene" uid="uid://s8h4ii7hirjx" path="res://Assets/Character/Player/Scene and Code/rig.tscn" id="3_tok1r"]
[ext_resource type="Material" uid="uid://ceuihmgg627a1" path="res://Assets/Character/Player/Materials/Player/PlayerBody.tres" id="4_nvi8e"]
[ext_resource type="Material" uid="uid://bmtegcce2kjbd" path="res://Assets/Character/Player/Materials/Player/PlayerHair.tres" id="5_cig8g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l2ndj"]
radius = 0.28647
height = 1.75

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_3qydi"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_tok1r"]
length = 0.6

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3qydi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.11815e-05, 0.87966, 5.96046e-06)
shape = SubResource("CapsuleShape3D_l2ndj")

[node name="SmoothCameraArm" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, -0.00424516, 1, -0.0024116)
shape = SubResource("SeparationRayShape3D_3qydi")
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="SmoothCameraArm"]
transform = Transform3D(0.999999, 0.000833335, 0.00118664, -0.000832078, 0.999999, -0.00106311, -0.00118752, 0.00106215, 0.999999, 0, 0, 0)
fov = 90.0

[node name="HorizontalPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00659299, 1.02167, -0.00255442)

[node name="VerticalPivot" type="Node3D" parent="HorizontalPivot"]

[node name="RigPivot" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Rig" parent="RigPivot" instance=ExtResource("3_tok1r")]

[node name="Skeleton3D" parent="RigPivot/Rig/PlayerModel/PlayerModel" index="0"]
bones/1/position = Vector3(-0.00146151, 0.0040515, 0.552516)
bones/1/rotation = Quaternion(-0.0263144, 0.706128, 0.706617, -0.0371993)
bones/2/rotation = Quaternion(0.69984, 0.0761941, 0.706774, 0.0699152)
bones/3/rotation = Quaternion(-1.02863e-08, -2.13994e-08, 0.225476, 0.974249)
bones/4/rotation = Quaternion(-0.459228, -0.546253, 0.56652, -0.412035)
bones/5/rotation = Quaternion(-6.61894e-07, 0.994051, -0.10892, -4.46835e-06)
bones/6/rotation = Quaternion(0.762809, -0.0947576, -0.638167, 0.0434255)
bones/7/rotation = Quaternion(-1.21866e-09, -3.92053e-08, -0.242603, 0.970126)
bones/8/rotation = Quaternion(0.464463, -0.536289, 0.581743, 0.397798)
bones/9/rotation = Quaternion(-1.56523e-07, 0.99405, -0.108921, -5.08944e-07)
bones/10/position = Vector3(0.00130568, 0.140552, -0.0144919)
bones/10/rotation = Quaternion(-0.057082, -0.047686, -0.010076, 0.997179)
bones/11/position = Vector3(3.11934e-11, 0.144263, 4.68563e-09)
bones/11/rotation = Quaternion(0.0178842, 0.00330088, -5.90392e-05, 0.999835)
bones/12/rotation = Quaternion(-0.0255462, -1.18931e-07, -3.06466e-09, 0.999674)
bones/13/rotation = Quaternion(0.0854017, 0.0066943, 0.000573888, 0.996324)
bones/14/rotation = Quaternion(0.00190586, -0.00676013, 1.27545e-05, 0.999975)
bones/15/rotation = Quaternion(-0.513673, 0.478916, 0.52023, 0.485943)
bones/16/rotation = Quaternion(-0.599248, -0.118879, -0.0921162, 0.786311)
bones/17/rotation = Quaternion(3.74222e-08, 2.20448e-08, 0.233178, 0.972434)
bones/18/rotation = Quaternion(0.00447037, 0.0385965, -0.0181983, 0.999079)
bones/19/rotation = Quaternion(-0.315458, 0.939095, -0.0337442, -0.132093)
bones/20/rotation = Quaternion(-0.169349, 0.173378, 0.269458, 0.932016)
bones/22/position = Vector3(0.051452, 0.0836997, 0.00122976)
bones/22/rotation = Quaternion(-0.0716317, 0.0177471, -0.206919, 0.975571)
bones/23/rotation = Quaternion(-0.258315, -0.0121746, 0.0654743, 0.963763)
bones/24/rotation = Quaternion(-0.0950228, -0.000396846, 0.00385284, 0.995468)
bones/25/position = Vector3(0.0233928, 0.112432, 0.00169727)
bones/25/rotation = Quaternion(-0.1383, 0.0175173, -0.117031, 0.983295)
bones/26/rotation = Quaternion(-0.111855, -0.0021666, 0.0243721, 0.993423)
bones/27/rotation = Quaternion(-0.173269, -0.00208261, 0.0124794, 0.984793)
bones/28/position = Vector3(-0.00697691, 0.125151, -0.000277412)
bones/28/rotation = Quaternion(-0.161458, -0.00578402, -0.00464342, 0.986852)
bones/29/rotation = Quaternion(-0.0841806, 0.00523345, -0.0503515, 0.995164)
bones/30/rotation = Quaternion(-0.13754, -0.00280236, 0.0239678, 0.990202)
bones/31/rotation = Quaternion(-0.513673, -0.478916, -0.52023, 0.485943)
bones/32/rotation = Quaternion(-0.610253, 0.136957, 0.0859833, 0.775526)
bones/33/rotation = Quaternion(4.57132e-08, -8.07529e-10, -0.279083, 0.960267)
bones/34/rotation = Quaternion(-0.0234054, -0.0537145, 0.121824, 0.990821)
bones/35/rotation = Quaternion(0.315458, 0.939095, -0.0337441, 0.132093)
bones/36/rotation = Quaternion(-0.169349, -0.173378, -0.269458, 0.932016)
bones/38/position = Vector3(-0.051452, 0.0836997, 0.00122979)
bones/38/rotation = Quaternion(-0.0716318, -0.0177471, 0.20692, 0.975571)
bones/39/rotation = Quaternion(-0.258315, 0.0121746, -0.0654743, 0.963763)
bones/40/rotation = Quaternion(-0.0950228, 0.000396858, -0.00385285, 0.995468)
bones/41/position = Vector3(-0.0233928, 0.112432, 0.00169721)
bones/41/rotation = Quaternion(-0.1383, -0.0175173, 0.117031, 0.983295)
bones/42/rotation = Quaternion(-0.111855, 0.0021666, -0.0243721, 0.993423)
bones/43/rotation = Quaternion(-0.173269, 0.00208261, -0.0124794, 0.984793)
bones/44/position = Vector3(0.0069769, 0.125151, -0.00027738)
bones/44/rotation = Quaternion(-0.161458, 0.00578403, 0.00464337, 0.986852)
bones/45/rotation = Quaternion(-0.0841806, -0.00523345, 0.0503515, 0.995164)
bones/46/rotation = Quaternion(-0.13754, 0.00280236, -0.0239678, 0.990202)

[node name="Body" parent="RigPivot/Rig/PlayerModel/PlayerModel/Skeleton3D" index="1"]
material_override = ExtResource("4_nvi8e")

[node name="Hair2" parent="RigPivot/Rig/PlayerModel/PlayerModel/Skeleton3D" index="5"]
material_override = ExtResource("5_cig8g")

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.6, 0)

[node name="StepUpSeparationRay_F" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.641026, -0.31805)
shape = SubResource("SeparationRayShape3D_tok1r")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_F"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -0.6, 0)

[node name="StepUpSeparationRay_R" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.641026, -0.31805)
shape = SubResource("SeparationRayShape3D_tok1r")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_R"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -0.6, 0)

[node name="StepUpSeparationRay_L" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.641026, -0.31805)
shape = SubResource("SeparationRayShape3D_tok1r")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_L"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -0.6, 0)

[editable path="RigPivot/Rig"]
[editable path="RigPivot/Rig/PlayerModel"]
